--- a/includes/references.bib
+++ b/includes/references.bib
@@ -16,24 +16,6 @@
     YEAR      = {2003}
 }
 
-@MISC{apache14,
-    AUTHOR       = {{The Apache Software Foundation}},
-    HOWPUBLISHED = {http://www.apache.org/},
-    YEAR         = {1999-2014}
-}
-
-@MISC{hadoop14,
-    AUTHOR       = {{Apache Hadoop}},
-    HOWPUBLISHED = {http://hadoop.apache.org/},
-    YEAR         = {2005-2014}
-}
-
-@MISC{mahout14,
-    AUTHOR       = {{Apache Mahout}},
-    HOWPUBLISHED = {https://mahout.apache.org/},
-    YEAR         = {2009-2014}
-}
-
 @INCOLLECTION{burke07,
     AUTHOR    = {Burke, Robin},
     TITLE     = {Hybrid Web Recommender Systems},
@@ -50,12 +32,6 @@
   pages={51},
   year={2010},
   organization={Citeseer}
-}
-
-@MISC{easyrec14,
-    AUTHOR       = {{easyrec}},
-    HOWPUBLISHED = {http://www.easyrec.org/},
-    YEAR         = {2009-2014}
 }
 
 @book{erl08,
@@ -106,7 +82,8 @@
     TITLE        = {What Is Artificial Intelligence?},
     MONTH        = nov,
     YEAR         = {2007},
-    HOWPUBLISHED = {http://www-formal.stanford.edu/jmc/whatisai/whatisai.html}
+    HOWPUBLISHED = {http://www-formal.stanford.edu/jmc/whatisai/whatisai.html},
+    NOTE         = {Accessed April 07, 2014}
 }
 
 @article{manouselis07,
@@ -118,21 +95,6 @@
   pages={415--441},
   year={2007},
   publisher={Springer}
-}
-
-@MISC{netflix09,
-    AUTHOR       = {{Netflix Inc.}},
-    TITLE        = {Netflix Prize: \$1 Million Paid, Another Million Now Up For Grabs},
-    MONTH        = sep,
-    YEAR         = {2009},
-    HOWPUBLISHED = {http://blog.netflix.com/2009\_09\_01\_archive.html}
-}
-
-@MISC{prudsys14,
-    AUTHOR       = {{Prudsys}},
-    TITLE        = {prudsys Realtime Decisioning Engine},
-    HOWPUBLISHED = {http://www.prudsys.de/en/solutions/rde-recommendations.html},
-    YEAR         = {2014}
 }
 
 @inproceedings{rack07,
@@ -156,4 +118,147 @@
     TITLE     = {Programming Collective Intelligence: Building Smart Web 2.0 Applications},
     PUBLISHER = {O'Reilly Media, Inc.},
     YEAR      = {2007}
+}
+
+
+
+@MISC{apache14,
+    AUTHOR       = {{The Apache Software Foundation}},
+    HOWPUBLISHED = {http://www.apache.org/},
+    NOTE         = {Accessed April 07, 2014},
+    YEAR         = {1999-2014}
+}
+@MISC{easyrec14,
+    AUTHOR       = {{easyrec}},
+    HOWPUBLISHED = {http://www.easyrec.org/},
+    NOTE         = {Accessed April 07, 2014},
+    YEAR         = {2009-2014}
+}
+@MISC{hadoop14,
+    AUTHOR       = {{Apache Hadoop}},
+    HOWPUBLISHED = {http://hadoop.apache.org/},
+    NOTE         = {Accessed April 07, 2014},
+    YEAR         = {2005-2014}
+}
+@MISC{mahout14,
+    AUTHOR       = {{Apache Mahout}},
+    HOWPUBLISHED = {https://mahout.apache.org/},
+    NOTE         = {Accessed April 07, 2014},
+    YEAR         = {2009-2014}
+}
+@MISC{prudsys14,
+    AUTHOR       = {{Prudsys}},
+    TITLE        = {prudsys Realtime Decisioning Engine},
+    HOWPUBLISHED = {http://www.prudsys.de/en/solutions/rde-recommendations.html},
+    NOTE         = {Accessed April 07, 2014},
+    YEAR         = {2014}
+}
+
+@MISC{expressjs,
+    AUTHOR       = {{express}},
+    HOWPUBLISHED = {http://expressjs.com},
+    NOTE         = {Accessed April 07, 2014},
+    YEAR         = {2014}
+}
+@MISC{nodejs,
+    AUTHOR       = {{node.js}},
+    HOWPUBLISHED = {http://nodejs.org/},
+    NOTE         = {Accessed April 07, 2014},
+    YEAR         = {2014}
+}
+@MISC{googlechrome,
+    AUTHOR       = {{Google Chrome}},
+    HOWPUBLISHED = {http://www.google.com/chrome/‎},
+    NOTE         = {Accessed April 07, 2014},
+    YEAR         = {2014}
+}
+@MISC{v8,
+    AUTHOR       = {{V8 JavaScript Engine}},
+    HOWPUBLISHED = {https://code.google.com/p/v8/},
+    NOTE         = {Accessed April 07, 2014},
+    YEAR         = {2014}
+}
+@MISC{json,
+    AUTHOR       = {{JavaScript Object Notation (JSON)}},
+    HOWPUBLISHED = {http://www.json.org/},
+    NOTE         = {Accessed April 07, 2014},
+    YEAR         = {2014}
+}
+@MISC{xml,
+    AUTHOR       = {{Extensible Markup Language (XML)}},
+    HOWPUBLISHED = {http://www.w3.org/XML/},
+    NOTE         = {Accessed April 07, 2014},
+    YEAR         = {2014}
+}
+@MISC{httpvocabulary,
+    AUTHOR       = {{HTTP Vocabulary in RDF 1.0}},
+    HOWPUBLISHED = {http://www.w3.org/TR/HTTP-in-RDF10/},
+    NOTE         = {Accessed April 07, 2014},
+    YEAR         = {2014}
+}
+@MISC{amqp,
+    AUTHOR       = {{Advanced Message Queuing Protocol (AMQP)}},
+    HOWPUBLISHED = {http://www.amqp.org/},
+    NOTE         = {Accessed April 07, 2014},
+    YEAR         = {2014}
+}
+@MISC{rabbitmq,
+    AUTHOR       = {{RabbitMQ}},
+    HOWPUBLISHED = {https://www.rabbitmq.com/},
+    NOTE         = {Accessed April 07, 2014},
+    YEAR         = {2014}
+}
+@MISC{neo4j,
+    AUTHOR       = {{Neo4j}},
+    HOWPUBLISHED = {http://www.neo4j.org/},
+    NOTE         = {Accessed April 07, 2014},
+    YEAR         = {2014}
+}
+@MISC{redis,
+    AUTHOR       = {{Redis}},
+    HOWPUBLISHED = {http://redis.io/},
+    NOTE         = {Accessed April 07, 2014},
+    YEAR         = {2014}
+}
+@MISC{git,
+    AUTHOR       = {{Git}},
+    HOWPUBLISHED = {http://git-scm.com/},
+    NOTE         = {Accessed April 07, 2014},
+    YEAR         = {2014}
+}
+@MISC{bitbucket,
+    AUTHOR       = {{BitBucket}},
+    HOWPUBLISHED = {https://bitbucket.org/},
+    NOTE         = {Accessed April 07, 2014},
+    YEAR         = {2014}
+}
+@MISC{newrelic,
+    AUTHOR       = {{NewRelic}},
+    HOWPUBLISHED = {http://newrelic.com/},
+    NOTE         = {Accessed April 07, 2014},
+    YEAR         = {2014}
+}
+@MISC{virtualbox,
+    AUTHOR       = {{VirtualBox}},
+    HOWPUBLISHED = {https://www.virtualbox.org/},
+    NOTE         = {Accessed April 07, 2014},
+    YEAR         = {2014}
+}
+@MISC{golang,
+    AUTHOR       = {{Go}},
+    HOWPUBLISHED = {http://golang.org/},
+    NOTE         = {Accessed April 07, 2014},
+    YEAR         = {2014}
+}
+@MISC{amazon,
+    AUTHOR       = {{Amazon.com}},
+    HOWPUBLISHED = {http://www.amazon.com/},
+    NOTE         = {Accessed April 07, 2014},
+    YEAR         = {2014}
+}
+@MISC{magento,
+    AUTHOR       = {{Magento}},
+    HOWPUBLISHED = {http://magento.com/products/overview},
+    NOTE         = {Accessed April 07, 2014},
+    YEAR         = {2014}
 }
