--- a/meta/bibl.tex
+++ b/meta/bibl.tex
@@ -3,8 +3,4 @@
 \bibliography{includes/references}
 \bibliographystyle{apalike}
 
-\nocite{apache14}
-\nocite{hadoop14}
-\nocite{mahout14}
-\nocite{easyrec14}
-\nocite{prudsys14}
+\nocite{*}
