--- a/includes/config.tex
+++ b/includes/config.tex
@@ -9,6 +9,10 @@
 \usepackage{float}
 \usepackage{fontspec}
 \usepackage{minted}
+\usepackage{multirow}
+\usepackage{tabularx}
+\usepackage{rotating}
+\usepackage{array}
 \usepackage[export]{adjustbox}
 \usepackage[top=1in, bottom=1in, left=1.5in, right=1in]{geometry}
 \usepackage[font=small]{caption}
