--- a/sections/plan.tex
+++ b/sections/plan.tex
@@ -1,49 +1,58 @@
 \chapter{Project Plan}
 
-\section{Methodology}
-
-%planning:
-%- 300 words
-%- api: node.js, expressjs
-%- configuration / engine layer: python, redis
-%- gui: symfony2
-
-\section{Demonstration}
-
-%planning:
-%- 100 words
-
-\subsection{eCommerce Storefront}
-
-%planning:
-%- 200 words
-%- two wireframes of how it would look like on a storefront
-%- Magento, demo data
-
-\subsection{Movie Browser}
-
-%planning:
-%- 200 words
-%- wireframes
-
-\section{Evaluation Criterias}
-
-%planning:
-%- 200 words
-%- unit testing of engine
-%- functional testing of demos
+This section provides a work schedule to complete this project as well as a fallback plan in case of unexpected or time-related circumstances.
 
 \section{Schedule}
 
-%planning:
-%- 150 words
-%- GANTT diagram
+This project will be split into two broad phases: \emph{implementation} and \emph{evaluation}. The implementation phase is from 1st May to 31st July 2014, then the evaluation phase is until 15th September 2014. As the project has significant implementation work to be done, this strict division makes sure that enough time is left for the evaluation phase.
+
+The schedule is devided into bi-weekly sprints with the aim that at the end of each sprint, a completed part of work is delivered. For the given time frame, there are nine sprints. Figure \ref{fig:schedule} shows the expected deliverables in these sprints.
+
+\begin{figure}[ht]
+    \footnotesize
+    \begin{tabularx}{\textwidth}{
+        !{\vrule width 1pt} c !{\vrule width 1pt} c !{\vrule width 1pt} X !{\vrule width 1pt}
+    }
+        \noalign{\hrule height 1pt}
+        & \textbf{Sprint} & \textbf{Deliverables}\\
+
+        \noalign{\hrule height 1pt}
+        \multirow{6}{*}{\begin{sideways}\textbf{Implementation}\end{sideways}} & 1 & 
+        Set up virtual machine as well as Magento.\newline
+        Implement interface layer.\newline
+        Implement publishing to message bus.
+        \\\cline{2-3}
+
+        & 2 & Implement master data service. \\\cline{2-3}
+
+        & 3 & Implement event service. \\\cline{2-3}
+
+        & 4 & Implement plug-in system for recommender techniques. \\\cline{2-3}
+
+        & 5 & Implement recommendation model service. \\\cline{2-3}
+
+        & 6 & Implement several rocemmender techniques \\
+
+        \noalign{\hrule height 1pt}
+        \multirow{3}{*}{\begin{sideways}\textbf{Evaluation}\end{sideways}} & 7 & 
+        Evaluation of architecture and recommendation quality.\newline
+        Structure report. \\\cline{2-3}
+        
+        & 8 & Write implementation related chapters of report. \\\cline{2-3}
+
+        & 9 & Write critical evaluation related chapters of report.\newline
+        Write documentation.\\
+
+        \noalign{\hrule height 1pt}
+    \end{tabularx}
+    \caption{Project Schedule}
+    \label{fig:schedule}
+\end{figure}
 
 \section{Fallback Plan}
 
-\subsection{Technical Risks}
+In this section alternative paths are defined in case of delays due to underestimated work or other external circumstances.
 
-\subsection{Schedule Risks}
+The software architecture is the critical path of this project. Little is gained when layers or distinctive features are missing. Therefore I will focus on delivering them. In case of delays it is possible to decrease the number of different techniques and recommendation scenarios. In the worst case scenario the abstraction level of the recommendation model can be lowered so that recommender techniques are not as generic as purposed.
 
-%planning:
-%- 150 words
+\emph{Go} and \emph{Neo4j} are unfamiliar to me. In case of slow progress due to the learning process, they maybe replaced by simpler or more familiar choices. \emph{Go} could be replaced by \emph{PHP} or \emph{Python}. The usage of \emph{Redis} is planned only if time permits. However if problems arise with \emph{Neo4j}, \emph{Redis} may be used as alternative.
