--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -1,10 +1,10 @@
 \chapter{Introduction}
 
-In this project I will design and develop an alternative architecture on the integration of recommender systems.
+In this project I will design and develop an architecture for the integration of recommender systems.
 
-Essentially, a \emph{recommender system} is a software which suggests useful items to a user on a given website or other platform. An item refers to any object available for the user and is subject to recommendations. A user is typically assisted in their search process on the platform which might be so vast that it becomes difficult to find the right item. Recommender systems are able to personalise so that it tries to suggest only items relevant for the particular user. In order to do this recommender systems rely on multiple techniques, notably \emph{collaborative filtering} and \emph{content-based filtering}.
+Essentially, a \emph{recommender system} is software which suggests useful items to a user on a given website or other platform. A user is typically assisted in their search process on the platform which might be so vast that it becomes difficult to find the right item. Recommender systems are able to personalise so that they try to suggest only items relevant for the particular user. In order to do this recommender systems rely on multiple techniques, notably \emph{collaborative filtering} and \emph{content-based filtering}.
 
-Recommender systems are usually tightly coupled to the context and architecture of the beforementioned platform. Bespoke recommender systems may require to know and access the platform's database structure as well as fit into the same implementation constraints such as programming languages. This paper analyses issues arising from that problem and proposes an alternative approach to overcome these issues. This project aims to deliver a \emph{multi-purpose recommender framework} which supports multiple techniques, is loosely coupled and easy to integrate. The framework provides an ecosystem with a plug-in system for recommender techniques and an event-driven learning concept. The solution of this project will be demonstrated in a real-life use case.
+Recommender systems are usually tightly coupled to the context and architecture of the beforementioned platform. Bespoke recommender systems may be dependent on web application's database structure as well as fit into implementation constraints such as programming languages. This project aims to deliver a \emph{multi-purpose recommender framework} which supports multiple techniques, is loosely coupled and easy to integrate. The framework provides an ecosystem with a plug-in system for recommender techniques and an event-driven learning concept. The solution of this project will be demonstrated in a real-life use case.
 
 \section{Proposal Structure}
 
